fix(config): fix storybook CI
* fix(config): fix storybook CI

* feat(deps): add support for semantic release

--- a/src/components/buttons/buttons.stories.mdx
+++ b/src/components/buttons/buttons.stories.mdx
@@ -1,7 +1,7 @@
 import { Meta, Story, Props, Preview } from '@storybook/addon-docs/blocks';
 
-import { Buttons } from './buttons';
+import { Button } from './button';
 
-<Meta title='Components/Buttons' component={Buttons} />
+<Meta title='Components/Button' component={Button} />
 
-# Buttons
+# Button
