fix(components): fix buttons import
* fix(components): fix buttons import

--- a/src/components/buttons/buttons.stories.mdx
+++ b/src/components/buttons/buttons.stories.mdx
@@ -1,7 +1,7 @@
 import { Meta, Story, Props, Preview } from '@storybook/addon-docs/blocks';
 
-import { Button } from './button';
+import { Buttons } from '.';
 
-<Meta title='Components/Button' component={Button} />
+<Meta title='Components/Buttons' component={Buttons} />
 
-# Button
+# Buttons
