fix(button): update button component, docs, and story

--- a/docs/pages/docs/components/button.mdx
+++ b/docs/pages/docs/components/button.mdx
@@ -56,3 +56,11 @@ render(
   </Button>
 );
 ```
+
+## API
+
+Button properties
+
+| Property | Description                          | Type      | Default | Version |
+| -------- | ------------------------------------ | --------- | ------- | ------- |
+| loading  | Set the loading status of the button | `boolean` | false   |         |
