docs: add new set of docs
add guide, oss, resources, releases, docs

--- a/website/pages/docs/index.mdx
+++ b/website/pages/docs/index.mdx
@@ -1,10 +1,4 @@
 ---
-title: Getting Started
-section: Guides
-slug: /docs/getting-started/
-order: 1
+slug: /docs/
+redirect: /docs/introduction/
 ---
-
-# Overview
-
-Edit `docs/index.mdx` this page to start writing documentation...
