docs(homepage): update docs homepage

--- a/website/pages/docs/about-camara.mdx
+++ b/website/pages/docs/about-camara.mdx
@@ -9,7 +9,7 @@ order: 3
 
 Camara is a design system that helps you build your ideas quickly and with less code. It's an open source project, and it's available to anyone who wants to build with it.
 
-Not much new ideas in it but it will be easy to use and with a reasonable amount of flexibility. Straight up, we are not embarking on building the most robust and flexible UI component library ever. What we are building is a simple UI component library that has been thoughtfully designed and implemented, to scratch our own itch of having to avoid build the same stuffs over again when working on our simple side projects.
+Not much new ideas in it but it will be easy to use and with a reasonable amount of flexibility. Straight up, I are not embarking on building the most robust and flexible UI component library ever. What I are building is a simple UI component library that has been thoughtfully designed and implemented, to scratch my own itch of having to avoid build the same stuffs over again when working on my simple side projects.
 
 Building a design system from the ground up comes with a lot of learning opportunities. These are some of the few things I'm excited to learn more about:
 
@@ -19,10 +19,6 @@ Building a design system from the ground up comes with a lot of learning opportu
 - Components reusability, Inheritance, Composition etc.
 - State management, package bundlers, next-gen JavaScript, etc.
 
-More importantly, by being the developers and users, it means that we can tell if what we have created meets our real needs - make building our side projects easy. Incredibly easy that it almost feels like cheating.
+More importantly, by being the developer and user, it means that I can tell if what I have created meets my needs - make building side projects easy. Incredibly easy that it almost feels like cheating.
 
-We're so excited 😍 to see what this turns into, and we can't stop thinking of the amazing projects that would be built with this. We feel so pumped and proud 💪🏾.
-
-## The Team
-
-Our team officially formed in mid 2020 with x team members, we're from diverse backgrounds and enjoy working together.
+I'm so excited 😍 to see what this turns into, and I can't stop thinking of the amazing projects that would be built with this. I feel so pumped and proud 💪🏾.
