--- a/website/pages/docs/contributing.mdx
+++ b/website/pages/docs/contributing.mdx
@@ -7,9 +7,9 @@ order: 7
 
 # Contributing
 
-This project will be open for contributions at version 1.0, right now, our only goal is to show off our work(what we are building) while still working on it publicly. The focus is on getting it to where we feel would be a solid start to our vision - helping you build your ideas quickly and with less code.
+This project will be open for contributions at version 1.0, right now, my only goal is to show off my work(what I are building) while still working on it publicly. The focus is on getting it to where I feel would be a solid start to my vision - helping you build your ideas quickly and with less code.
 
-You will notice the absence of a contribution guide, and some other piece of a regular open-source project. These are things we are gearing work on and making plans to make them available as soon as we begin accepting contributions.
+You will notice the absence of a contribution guide, and some other piece of a regular open-source project. These are things I are gearing work on and making plans to make them available as soon as I begin accepting contributions.
 
-While we could easily keep working on this in stealth and release when we are ready, we do not think this is the right decision for us at this moment. We are huge advocates of working in public and are proud to show our initial ideas while documenting our progress to where we want to go.  
-Also, building in public keeps us much more accountable and helps fuel our momentum to get our ideas out. We hope you understand this and are excited as much as we look forward to Camara V1.
+While I could easily keep working on this in stealth and release when I are ready, I do not think this is the right decision for us at this moment. I are huge advocates of working in public and are proud to show my initial ideas while documenting my progress to where I want to go.  
+Also, building in public keeps us much more accountable and helps fuel my momentum to get my ideas out. I hope you understand this and are excited as much as I look forward to Camara V1.
