--- a/website/pages/docs/introduction.mdx
+++ b/website/pages/docs/introduction.mdx
@@ -7,30 +7,29 @@ order: 1
 
 # Introduction
 
-> It's our first time open-sourcing a serious project, and we want to increase our chances of having a positive experience. We hope this helps us communicate the right expectations on our work.
+> It's my first time open-sourcing a serious project, and I want to increase my chances of having a positive experience. I hope this helps us communicate the right expectations on my work.
 
-The Camara homepage provides expanded guidance and documentation on the design language, component library and style/pattern guide. We want our users to have as much information as possible while exploring Camara.
+The Camara homepage provides expanded guidance and documentation on the design language, component library and style/pattern guide. I want my users to have as much information as possible while exploring Camara.
 
-If you’re new to Camara, start with our [getting started guide](/docs/start/get-started). It has everything you need to design and develop your side projects with Camara.
+If you’re new to Camara, start with my [getting started guide](/docs/start/get-started). It has everything you need to design and develop your side projects with Camara.
 
 ## Production Use
 
-Camara isn’t ready for production use yet, but we want to give you an early preview of what’s coming. We'd love you to give it a try. As always, we encourage feedback and contributions. We plan to launch Beta this summer and 1.0 early next year.
+Camara isn’t ready for production use yet, but I want to give you an early preview of what’s coming. I'd love you to give it a try. As always, I encourage feedback and contributions. I plan to launch Beta this summer and 1.0 early next year.
 
 ## Contributions
 
-This project will be open for contributions at version 1.0, right now, our only goal is to show off our work (what we are building) while still working on it publicly. The focus is on getting it to where we feel would be a solid start to our vision - helping you build your ideas quickly and with less code.
+This project will be open for contributions at version 1.0, right now, my only goal is to show off my work (what I are building) while still working on it publicly. The focus is on getting it to where I feel would be a solid start to my vision - helping you build your ideas quickly and with less code.
 
-You will notice the absence of a contribution guide, and some other piece of a regular open-source project. These are things we are gearing work on and making plans to make them available as soon as we begin accepting contributions.
+You will notice the absence of a contribution guide, and some other piece of a regular open-source project. These are things I are gearing work on and making plans to make them available as soon as I begin accepting contributions.
 
-While we could easily keep working on this in stealth and release when we are ready, we do not think this is the right decision for us at this moment. We are huge advocates of working in public and are proud to show our initial ideas while documenting our progress to where we want to go.  
-Also, building in public keeps us much more accountable and helps fuel our momentum to get our ideas out. We hope you understand this and are excited as much as we look forward to Camara V1.
+While I could easily keep working on this in stealth and release when I are ready, I do not think this is the right decision for us at this moment. I are huge advocates of working in public and are proud to show my initial ideas while documenting my progress to where I want to go.  
+Also, building in public keeps us much more accountable and helps fuel my momentum to get my ideas out. I hope you understand this and are excited as much as I look forward to Camara V1.
 
 ## Staying informed
 
 - [GitHub](https://github.com/Camaradotspace)
 - [Twitter](https://github.com/preshonyee)
-- \*[Blog](https://camara.space/)
 
 ## Something missing?
 
