docs(website): update docs

--- a/website/pages/docs/changelog.mdx
+++ b/website/pages/docs/changelog.mdx
@@ -2,6 +2,7 @@
 title: Changelog
 section: Getting Started
 slug: /docs/changelog/
+order: 7
 ---
 
 # Changelog
@@ -284,7 +285,7 @@ slug: /docs/changelog/
 
 ### v1.0.0-beta.9 (Sat Mar 27, 2021)
 
-A change has been made to how the project gets updated. Going forward every new `beta` version is going to focus solely on a single component and try to improve on the component across its Storybook stories, docs, test, and real-world usage. This way I can move incrementally while knowing that I are thinking about each component in a comprehensive manner.
+A change has been made to how the project gets updated. Going forward every new `beta` version is going to focus solely on a single component and try to improve on the component across its Storybook stories, docs, test, and real-world usage. This way I can move incrementally while knowing that I am thinking about each component in a comprehensive manner.
 
 - `Button` component:
   - ❌ remove `primary` prop option for setting the type of button.
@@ -328,7 +329,7 @@ A change has been made to how the project gets updated. Going forward every new 
 
 Rebuild from the ground-up. This changes everything!!!
 
-- The previous bundler cli `microbundle` had a lot of issues with generating typescript definitions and wasn't flexible for me to modify its behavior.  
+- The previous bundler cli `microbundle` had a lot of issues with generating typescript definitions and wasn't flexible for me to modify its behavior.
   After loads of inconsistencies and mess I had to rewrite the core library to make use of rollup directly.
   This has made bundling the library much more solid and consistent than before. A lot has changed, I had to touch every single file but somehow keep the same APIs for each components.
   This lays a much more solid foundation for future version of Camara
