--- a/website/pages/docs/examples.mdx
+++ b/website/pages/docs/examples.mdx
@@ -2,6 +2,9 @@
 title: Examples
 section: Resources
 slug: /docs/examples/
+order: 10
 ---
 
 # Examples
+
+We're hard at work creating examples that showcases Camara usage in different use cases. Stay tuned and watch this space.
