--- a/website/pages/docs/installation.mdx
+++ b/website/pages/docs/installation.mdx
@@ -2,6 +2,40 @@
 title: Installation
 section: Getting Started
 slug: /docs/installation/
+order: 8
 ---
 
 # Installation
+
+Camara is a 🚧 work-in-progress and is still in beta.
+
+## Install
+
+```bash
+npm install --save camara
+
+# or
+
+yarn add camara
+```
+
+## Usage
+
+```tsx
+import React from 'react';
+import { Button } from 'camara';
+
+const App = () => {
+  return (
+    <>
+      <Button>Camara</Button>
+    </>
+  );
+};
+
+export default App;
+```
+
+## Templates
+
+A template for Create-React-App, NextJS, and Gatsby are in the works so that its easier to scaffold building web apps with Camara in these frameworks
