--- a/website/pages/docs/why-camara.mdx
+++ b/website/pages/docs/why-camara.mdx
@@ -2,6 +2,7 @@
 title: Why Camara
 section: Camara
 slug: /docs/why-camara/
+order: 3
 ---
 
 # Why Camara
@@ -16,7 +17,7 @@ To build projects that feel like enough thought and care was put into making the
 
 This is why I set out to build a design system. Camara is an attempt at creating that balance.
 
-> If you make a lot of side projects or have made one before, think of all the time you spent in trying to get the user interface to the point you wanted it to be. Accessible, beautiful, and responsive.  
+> If you make a lot of side projects or have made one before, think of all the time you spent in trying to get the user interface to the point you wanted it to be. Accessible, beautiful, and responsive.
 > Now think of halving that time and investing it into all the other piece of your project that isn't about the interface. How would that have empowered you into making a more rounded project?
 
 Camara aims to buy you back that time. With Camara, building your interfaces is easy and with less code. This empowers you to bring your ideas to life faster and invest time in all other pieces that makes your project tick.
