--- a/website/pages/docs/about-camara.mdx
+++ b/website/pages/docs/about-camara.mdx
@@ -2,13 +2,14 @@
 title: About Camara
 section: Camara
 slug: /docs/about-camara/
+order: 2
 ---
 
 # About Camara
 
 Camara is a design system that helps you build your ideas quickly and with less code. It's an open source project, and it's available to anyone who wants to build with it.
 
-Not much new ideas in it but it will be easy to use and with a reasonable amount of flexibility. Straight up, I are not embarking on building the most robust and flexible UI component library ever. What I are building is a simple UI component library that has been thoughtfully designed and implemented, to scratch my own itch of having to avoid build the same stuffs over again when working on my simple side projects.
+Not much new ideas in it but it will be easy to use and with a reasonable amount of flexibility. Straight up, I am not embarking on building the most robust and flexible UI component library ever. What I am building is a simple UI component library that has been thoughtfully designed and implemented, to scratch my own itch of having to avoid build the same stuffs over again when working on my simple side projects.
 
 Building a design system from the ground up comes with a lot of learning opportunities. These are some of the few things I'm excited to learn more about:
 
