--- a/website/pages/docs/figma-design-lib.mdx
+++ b/website/pages/docs/figma-design-lib.mdx
@@ -2,6 +2,25 @@
 title: Figma Design Library
 section: Resources
 slug: /docs/figma-design-library/
+order: 11
 ---
 
 # Figma Design Library
+
+The Figma design library lays the foundation for all or most of the work that goes into engineering.
+
+In Figma, a lot of experiments are carried out on User Interface elements and decision is made based on various factors. One thing we strive for is to design all UI elements with Accessibility in mind and this helps to inform similar efforts that would be transferred in the codebase.
+
+We're gearing up for a version 1.0.0 release for Camara and we've been hard at work with revisiting the design of every single component. We're designing this in public and reviewing in a public Figma workspace. Feel free to check it out and provide us some feedback. We're looking for ways to improve the Camara Design System for both designers and developers.
+
+Link to Figma workspace [click here](https://www.figma.com/file/ZyAZ8ZT78b0AudmG8o3whB/Design-System-Components?node-id=0%3A1)
+
+For the Figma Community File [click here](https://www.figma.com/community/file/956877234997353958/Camara-Design-System).
+
+<iframe
+  style='border: 1px solid rgba(0, 0, 0, 0.1);'
+  width='800'
+  height='450'
+  src='https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Ffile%2FZyAZ8ZT78b0AudmG8o3whB%2FDesign-System-Components%3Fnode-id%3D0%253A1'
+  allowfullscreen
+></iframe>
