--- a/website/pages/docs/changelog.mdx
+++ b/website/pages/docs/changelog.mdx
@@ -11,6 +11,19 @@ order: 7
 
 ## Latest
 
+### v1.0.0-beta.27 (Tue May 18, 2021)
+
+- 🆕: Initial prototype for themeing and dark mode support
+- ✨: Improve tests for all components
+- ✨: Improve Type and TypeScript support for all components
+- 📚: Improve documentation, add analytics and SEO support
+
+#### Authors: 1
+
+- ᑭᖇᗴᔕᕼ ᗝᑎƳᗴᗴ ([@Preshonyee](https://github.com/Preshonyee))
+
+---
+
 ### v1.0.0-beta.26 (Wed Apr 7, 2021)
 
 - `Flex` component:
