chore(release): version bump: v1.0.0-beta.28

--- a/website/pages/docs/changelog.mdx
+++ b/website/pages/docs/changelog.mdx
@@ -11,6 +11,19 @@ order: 7
 
 ## Latest
 
+### v1.0.0-beta.28 (Fri May 21, 2021)
+
+- 🆕: Add support for styled system
+- ✨: Improve on themeing experiment
+- ✨: Improve on dark mode experiment
+- 🚧: Rewrite `button` component to use styled system with dark mode support
+
+#### Authors: 1
+
+- ᑭᖇᗴᔕᕼ ᗝᑎƳᗴᗴ ([@Preshonyee](https://github.com/Preshonyee))
+
+---
+
 ### v1.0.0-beta.27 (Tue May 18, 2021)
 
 - 🆕: Initial prototype for themeing and dark mode support
